File logs update