@@ -1,7 +1,7 @@
 package nikguscode.com.crmbot.model.service.logger;
 
 import lombok.extern.slf4j.Slf4j;
-import nikguscode.com.crmbot.model.service.TelegramType;
+import nikguscode.com.crmbot.model.service.enums.TelegramType;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.PropertySource;
 import org.springframework.stereotype.Service;
@@ -15,7 +15,7 @@ import java.time.format.DateTimeFormatter;
 
 @Slf4j
 @Service
-@PropertySource("path.properties")
+@PropertySource(value = "path.properties", encoding = "UTF-8")
 public class FileLogger {
     private final String pathToMessageLogs;
 
@@ -25,15 +25,55 @@ public class FileLogger {
 
     public void updateLogs(String text, TelegramType dataType) {
         createFolderIfNotFounded(dataType);
+        createFileIfNotFounded(dataType);
+
+        Path filePath = Path.of(getFileName(dataType));
 
         try {
-            Files.writeString(Path.of(getFileName(dataType)), text, StandardOpenOption.CREATE, StandardOpenOption.APPEND);
-
-            if (Files.size(Path.of(getFileName(dataType))) > 0) {
-                Files.writeString(Path.of(getFileName(dataType)), ",\n", StandardOpenOption.APPEND);
+            if (!isFileEmpty(dataType)) {
+                String fileContent = Files.readString(filePath);
+                Files.write(filePath, fileContent.substring(0, fileContent.length() - 1).getBytes(), StandardOpenOption.TRUNCATE_EXISTING);
+                Files.writeString(filePath, ",\n", StandardOpenOption.APPEND);
             }
+
+            Files.writeString(filePath, text, StandardOpenOption.APPEND);
+            Files.writeString(filePath, "]", StandardOpenOption.APPEND);
         } catch (IOException e) {
             throw new RuntimeException(e);
+        }
+    }
+
+    private String getFileName(TelegramType dataType) {
+        // return = path/telegramType/telegramType_dd.MM.yyyy
+        // example = logs/messages/text_28.05.2023.json
+        return new StringBuffer(pathToMessageLogs)
+                .append("/")
+                .append(dataType.toString().toLowerCase())
+                .append("/")
+                .append(LocalDate.now().format(DateTimeFormatter.ofPattern("dd.MM.yyyy")))
+                .append(".json")
+                .toString();
+    }
+
+    private boolean isFileEmpty(TelegramType dataType) {
+        Path filePath = Path.of(getFileName(dataType));
+
+        try {
+            return Files.readString(filePath).length() == 1;
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+    }
+
+    private void createFileIfNotFounded(TelegramType dataType) {
+        Path filePath = Path.of(getFileName(dataType));
+
+        if (!Files.exists(filePath)) {
+            try {
+                Files.writeString(filePath, "[", StandardOpenOption.CREATE, StandardOpenOption.APPEND);
+            } catch (IOException e) {
+                throw new RuntimeException(e);
+            }
         }
     }
 
@@ -50,23 +90,11 @@ public class FileLogger {
             try {
                 Files.createDirectories(folderPath);
             } catch (IOException e) {
-                log.error("[Ошибка при создании папки: «{}»]", folderPath);
+                log.error("[Error when creating «{}» folder]", folderPath);
                 throw new RuntimeException(e);
             }
 
-            log.info("[Папка: «{}» успешно создана]", folderPath);
+            log.info("[Folder: «{}» has successful created]", folderPath);
         }
-    }
-
-    private String getFileName(TelegramType dataType) {
-        // return = path/telegramType/telegramType_dd.MM.yyyy
-        // example = logs/messages/text_28.05.2023.json
-        return new StringBuffer(pathToMessageLogs)
-                .append("/")
-                .append(dataType.toString().toLowerCase())
-                .append("/")
-                .append(LocalDate.now().format(DateTimeFormatter.ofPattern("dd.MM.yyyy")))
-                .append(".json")
-                .toString();
     }
 }
